[package]
name = "memory-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
hex = "0.4"
thiserror = "1.0"

# For linux injection
nix = "0.23"
# For windows injection
widestring = "0.5"
sysinfo = "0.21"
winapi = { version = "0.3.9", features = [
    "winbase",
    "memoryapi",
    "processthreadsapi",
    "libloaderapi", 
    "handleapi"
]}
regex = "1.5"

