[package]
name = "memory-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
hex = "0.4"
thiserror = "1.0"

# For linux injection
nix = "0.29"
# For windows injection
widestring = "1.1"
sysinfo = "0.30"
winapi = { version = "0.3.9", features = [
    "winbase",
    "memoryapi",
    "processthreadsapi",
    "libloaderapi", 
    "handleapi"
]}
regex = "1.10"

